@@ -29,6 +29,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,6 +44,7 @@ public class CourseService implements ICourseService {
     private final CourseChapterRepository courseChapterRepository;
     private final RabbitTemplate rabbitTemplate;
     private final IdentityClient identityClient;
+    private final StudentEnrolledCourseRepository enrolledCourseRepository;
 
     @Override
     @Transactional
@@ -540,16 +542,32 @@ public class CourseService implements ICourseService {
 
     @Override
     @Transactional(readOnly = true)
-    @Cacheable(value = "courseDetail", key = "#slug")
-    public CourseDetailPublicResponse getPublicCourseDetail(String slug) {
-        // 1. Find course by slug , just get PUBLISH COURSE
-        Course course = courseRepository.findBySlugAndStatus(slug, CourseStatus.PUBLISHED)
+    public CourseDetailPublicResponse getPublicCourseDetail(String slug, String userRole, UUID userId, String fromPlayer) {
+        // 1. Find course by slug
+        Course course = courseRepository.findBySlug(slug)
                 .orElseThrow(() -> new AppException(ErrorCode.COURSE_NOT_FOUND));
 
-        // 2. Get all chapter of course
+        // 2. Check access permissions
+        boolean canView = false;
+        if (CourseStatus.PUBLISHED.equals(course.getStatus())) {
+            canView = true;
+        } else if ("ADMIN".equals(userRole)) {
+            canView = true;
+        } else if ("TEACHER".equals(userRole) && course.getInstructorId().equals(userId)) {
+            canView = true;
+        }
+
+        if (!canView) {
+            throw new AppException(ErrorCode.COURSE_NOT_FOUND);
+        }
+
+        boolean isEnrolled = (userId != null) && enrolledCourseRepository.existsByStudentIdAndCourseId(userId, course.getId());
+        boolean isFromPlayer = "true".equals(fromPlayer) && (userId != null);
+
+        // 3. Get all chapter of course
         List<CourseChapter> chapters = courseChapterRepository.findByCourseIdOrderByDisplayOrderAsc(course.getId());
 
-        // 3. Create list of chapter DTOs
+        // 4. Create list of chapter DTOs
         List<ChapterPublicDto> chapterDtos = chapters.stream().map(chapter -> {
 
             // Get all lesson of this chapter
@@ -564,15 +582,24 @@ public class CourseService implements ICourseService {
                         .duration(lesson.getDurationSeconds())
                         .isPreview(lesson.getIsPreview())
                         .build();
-                if(lesson.getIsPreview()){
+
+                boolean shouldShowContent = lesson.getIsPreview() 
+                        || "ADMIN".equals(userRole) 
+                        || ("TEACHER".equals(userRole) && course.getInstructorId().equals(userId))
+                        || isEnrolled
+                        || isFromPlayer;
+
+                if (shouldShowContent) {
                     if (lesson.getContent() != null) {
                         dto.setVideoUrl(lesson.getContent().getStorageUrl());
+                        dto.setContentType(lesson.getContent().getContentType());
+                        dto.setTextContent(lesson.getContent().getTextContent());
                     }
-                }else{
+                } else {
                     dto.setVideoUrl(null);
                 }
                 return dto;
-        }).toList();
+        }).collect(Collectors.toList());
             return ChapterPublicDto.builder()
                     .id(chapter.getId())
                     .title(chapter.getTitle())
